Fixed Layout break in gallery

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+.styles-module_wrapper__1I_qj{
+  z-index: 2;
+}
+
 
 .main-heading {
   text-align: center;
